tests/expectations/compiler/libraries/lib_submodule_wrong_generic_count_fail.out
Error [ETYC0372140]: Call expected `1` const args, but got `2`
    --> compiler-test:5:16
     |
   5 |         return math_lib::ops::scale::[3u32, 4u32](5u32);  // 2 const args, expects 1
     |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
